<resources>
    <string name="app_name">Car Setting</string>
    <string name="settings">Setting</string>
    <string name="source_navi">Navigation</string>
    <string name="set_general">General</string>
    <string name="set_datetime">Date Time</string>
    <string name="set_wallpaper">Wallpaper</string>
    <string name="set_navigation">Navigation</string>
    <string name="set_video">Video</string>
    <string name="set_swc">SWC</string>
    <string name="set_factory">Factory Set</string>
    <string name="set_sound_effect">Sound Effect</string>
    <string name="set_calibration">Calibration</string>
    <string name="set_radio_frequency">Radio Area</string>
    <string name="set_bt">Bluetooth</string>
    <string name="set_gps_info">Gps info</string>
    <string name="set_carcorder">DVR</string>
    <string name="set_wifi">Wi-Fi</string>
    <string name="wifi_ssid">SSID:</string>
    <string name="wifi_enc">ENC:</string>
    <string name="wifi_password">Password:</string>
    <string name="wifi_connect">Connect</string>
    <string name="wifi_disconnect">Disconnect</string>
    <string name="wifi_forget">Forget</string>
    <string name="wifi_WLAN_Unprotected">WLAN Unprotected</string>
    <string name="wifi_WLAN_UNKNOWN">WLAN UNKNOWN</string>
    <string name="wifi_WPA_Usable">(WPS Usable)</string>
    <string name="wifi_UNABLECONNECT">unable connect</string>
    <string name="wifi_state_SCANNING">scanning...</string>
    <string name="wifi_state_AUTHENTICATING">authenticating...</string>
    <string name="wifi_state_OBTAINING_IPADDR">obtaining ip address...</string>
    <string name="wifi_state_CONNECTING">connecting...</string>
    <string name="wifi_state_CONNECTED">connected</string>
    <string name="wifi_state_DISCONNECTING">disconnecting...</string>
    <string name="wifi_state_DISCONNECTED">disconnected</string>
    <string name="set_language">Language</string>
    <string name="set_buzzer">Beep</string>
    <string name="set_lighting_detect">Light Detect</string>
    <string name="set_screensaver">ScreenSaver</string>
    <string name="set_reset">Reset</string>
    <string name="set_about">About</string>
    <string name="set_assistive_touch">AssistiveTouch</string>
    <string name="set_voice_button">Show voice button</string>
    <string name="set_wakeup_button">Voice wakeup</string>
    <string name="set_datetime_clock">Clock</string>
    <string name="set_datetime_24hours">24-hour time</string>
    <string name="set_datetime_gps_syc">Gps syc time</string>
    <string name="set_datetime_zone">TimeZone</string>
    <string name="set_bt_device">Device name</string>
    <string name="set_bt_pair">Pair code</string>
    <string name="set_bt_auto_connect">Auto connect</string>
    <string name="set_bt_auto_answer">Auto answer</string>
    <string name="set_nav_maps_select">Default map</string>
    <string name="set_nav_maps_prompt">Please install maps apk!</string>
    <string name="set_nav_volume_gis">Volume gis</string>
    <string name="set_nav_volume_backcar">Volume backcar</string>
    <string name="set_nav_volume_bt">Volume bt</string>
    <string name="set_nav_volume_media_front">Volume front media</string>
    <string name="set_nav_volume_media_back">Volume rear</string>
    <string name="set_nav_gps_test">Gps info</string>
    <string name="set_nav_maps_list_decription">Map list</string>
    <string name="set_nav_maps_list">Select map</string>
    <string name="set_nav_volume_remix">Volume Remix</string>
    <string name="set_nav_volume_listen">Volume Listen</string>
    <string name="set_backcar_mirror">Rear Camera Mirror</string>
    <string name="set_parking">Parking</string>
    <string name="set_screen_bright">Bright</string>
    <string name="set_screen_contast">Contrast</string>
    <string name="set_screen_hue">Hue</string>
    <string name="set_screen_saturation">Saturation</string>
    <string name="set_screen_colorful">Colorful</string>
    <string name="set_screen_soft">Soft</string>
    <string name="set_screen_reset">Reset</string>
    <string name="set_backlight">Backlight</string>
    <string name="general_backcar_record">BackCar video record</string>
    <string name="general_key_light">Button lamp brightness</string>
    <string name="general_car_battery_protect">Battery protect</string>
    <string name="general_car_battery_protect_m">middle</string>
    <string name="general_open_sound">Power Volume</string>
    <string name="general_buzzer">Buzzer</string>
    <string name="general_cvbs">CVBS</string>
    <string name="general_headlight_detection">Headlight detection</string>
    <string name="general_parking_detection">Parking</string>
    <string name="general_language_select">Language select</string>
    <string name="general_about_car">about</string>
    <string name="general_about_model">Model： %1$s</string>
    <string name="general_about_androidVersion">android version： %1$s</string>
    <string name="general_about_kernelVersion">Kernel version： %1$s</string>
    <string name="general_about_Version">Version： %1$s</string>
    <string name="general_about_mcuVersion">mcu Version： %1$s</string>
    <string name="general_about_mcuID">mcu ID： %1$s</string>
    <string name="general_about_dvdVersion">dvd Version： %1$s</string>
    <string name="general_backlight">Backlight</string>
    <string name="general_aux_port_change">Avin change</string>
    <string name="general_aux_port_front">Front</string>
    <string name="general_aux_port_rear">Rear</string>
    <string name="general_backcar_mute">Backcar mute </string>
    <string name="factory_qicaideng">Colorful light</string>
    <string name="qicaideng_r">R</string>
    <string name="qicaideng_g">G</string>
    <string name="qicaideng_b">B</string>
    <string name="general_set_time">Time setting</string>
    <string name="general_set_timezone">Timezone setting</string>
    <string name="general_date_gps_syc">Automatically set the time</string>
    <string name="general_date_time_24">24 hour</string>
    <string name="nav_maps_select">Default navigation soft</string>
    <string name="nav_volume_gis">Navigationg volume</string>
    <string name="nav_volume_backcar">Backcar volume</string>
    <string name="nav_volume_bt">Bluetooth phone volume</string>
    <string name="nav_volume_media_front">Front media volume</string>
    <string name="nav_volume_media_back">Rear media volume</string>
    <string name="nav_gps_test">Gps test</string>
    <string name="nav_maps_list_decription">map list</string>
    <string name="nav_maps_list_title">Select Maps application</string>
    <string name="nav_volume_remix">Navi Remix</string>
    <string name="nav_volume_listen">Navi And Listen</string>
    <string name="factory_radio_area_config">Radio area config</string>
    <string name="factory_radio_area">Default Radio area</string>
    <string name="media_radio_default">China</string>
    <string name="media_tv_dvr">Switch DVR and TV</string>
    <string name="media_tv_dvr_tv">TV</string>
    <string name="media_tv_dvr_dvr">DVR</string>
    <string name="media_sound_effect">Sound effect</string>
    <string name="media_back_camera">Back camera setting</string>
    <string name="media_back_left90">Left up</string>
    <string name="media_back_right90">Right up</string>
    <string name="media_back_left180">Left down</string>
    <string name="media_back_right180">Right down</string>
    <string name="media_ban_on_video">Ban to video while driving</string>
    <string name="media_backcar_trace">BackCar trace</string>
    <string name="media_backcar_mirror">BackCar mirror</string>
    <string name="media_mirror_FLIP_NONE">normal</string>
    <string name="media_mirror_FLIP_H">left_right mirror</string>
    <string name="media_mirror_FLIP_V">up-down mirror</string>
    <string name="media_mirror_FLIP_HnV">all mirror</string>
    <string name="style_wallpaper">Wallspaper </string>
    <string name="style_wallpaper_title">Wallspaper select</string>
    <string name="style_logo_setting">Logo Setting</string>
    <string name="system_usb_model">USB model</string>
    <string name="system_usb_host">Host</string>
    <string name="system_usb_device">Device</string>
    <string name="system_usb_type">USB type</string>
    <string name="system_usb_10">USB 1.0</string>
    <string name="system_usb_20">USB 2.0</string>
    <string name="system_volume_adjust">Volume adjust</string>
    <string name="system_mcu_upgrade">MCU upgrade</string>
    <string name="system_factory_test">Factory Testing</string>
    <string name="system_factory_fun_config">Function configuration</string>
    <string name="system_factory_lcd_config">Lcd configuration</string>
    <string name="factory_navigation_set">Navigation</string>
    <string name="factory_backcar_set">BackCar</string>
    <string name="factory_radio_set">Radio</string>
    <string name="factory_bt_set">BT</string>
    <string name="factory_other_set">Other</string>
    <string name="factory_car_type">Car type</string>
    <string name="factory_timezone_set">TimeZone</string>
    <string name="factory_volume_set">Volume set</string>
    <string name="factory_video_set">Video set</string>
    <string name="factory_dvr_type">DVR type</string>
    <string name="factory_tv_type">TV type</string>
    <string name="factory_tv_area">TV area</string>
    <string name="factory_video_format">Video output format</string>
    <string name="factory_video_NTSC">NTSC</string>
    <string name="factory_video_PAL">PAL</string>
    <string name="factory_brake_enable">Brake enable</string>
    <string name="factory_bt_noice">BT noice</string>
    <string name="factory_crv_audio_input">CRV audio input</string>
    <string name="factory_mic_volume">Mic volume</string>
    <string name="factory_dvd_area_code">DVD area code</string>
    <string name="factory_tyre_com">Tyre serial com</string>
    <string name="factory_outside_temp">Outside temperation</string>
    <string name="factory_lcd_enable">LCD enable</string>
    <string name="factory_antenna_ctrl">antenna control</string>
    <string name="factory_drive_record">Drive record</string>
    <string name="factory_front_camera">front camera</string>
    <string name="factory_gain_adjust">BT phone gain</string>
    <string name="factory_power_amplifier_ctrl">Amplifier control</string>
    <string name="factory_air_temp_ctrl">Air temprature control</string>
    <string name="factory_air_temp_together">Together</string>
    <string name="factory_air_temp_alone">Alone</string>
    <string name="factory_system_updata_usb">System update from USB</string>
    <string name="factory_reset_def">Reset to default</string>
    <string name="factory_reboot">Reboot</string>
    <string name="factory_password">Password</string>
    <string name="factory_save_reboot">Save and Reboot</string>
    <string name="factory_sound_effect">Sound effect set</string>
    <string name="factory_xml_export">Export xml file</string>
    <string name="factory_dvd_load_pic">Dvd load picture set</string>
    <string name="factory_tocuh_key_learn_caption">Touch button learning</string>
    <string name="factory_sleep_about">Sleep about</string>
    <string name="factory_lcd_type">Lcd type</string>
    <string name="factory_lcd_type_ttl">TTL</string>
    <string name="factory_lcd_type_lvds">LVDS</string>
    <string name="factory_lvds_bit">LVDS Bit</string>
    <string name="factory_lvds_bit6">6</string>
    <string name="factory_lvds_bit8">8</string>
    <string name="factory_lcd_resolution">Lcd resolution</string>
    <string name="factory_tft_drive_current">TFT drive current</string>
    <string name="factory_lvds_drive_current">LVDS drive current</string>
    <string name="factory_dithering_output">Dithering output</string>
    <string name="factory_mapdata_upgrade">Map data upgrade</string>
    <string name="factory_tocuh_calibration_caption">Touch learning</string>
	<string name="str_btn_back">Back</string>
</resources>