<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:carsetting="http://schemas.android.com/apk/res/com.yecon.carsetting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:padding="@dimen/fragment_padding" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.yecon.carsetting.view.HeaderLayout
            android:id="@+id/factory_bt_noice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            carsetting:item_style="2"
            carsetting:item_subTitle="@string/factory_bt_noice" />

        <com.yecon.carsetting.view.HeaderLayout
            android:id="@+id/set_bt_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            carsetting:item_style="0"
            carsetting:item_subTitle="@string/set_bt_device" />

        <com.yecon.carsetting.view.HeaderLayout
            android:id="@+id/set_bt_pair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            carsetting:item_style="0"
            carsetting:item_subTitle="@string/set_bt_pair" />

        <com.yecon.carsetting.view.HeaderLayout
            android:id="@+id/set_bt_auto_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            carsetting:item_style="2"
            carsetting:item_subTitle="@string/set_bt_auto_connect" />

        <com.yecon.carsetting.view.HeaderLayout
            android:id="@+id/set_bt_auto_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            carsetting:item_style="2"
            carsetting:item_subTitle="@string/set_bt_auto_answer" />
    </LinearLayout>

</ScrollView>